fix: change spacing for mobile

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   position: absolute;
   z-index: 1;
-  top: 45%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -112,18 +112,6 @@
   width: 20px;
 }
 
-@media only screen and (min-width: 600px) {
-  .hero {
-    align-items: flex-start;
-  }
-
-  .trailsText {
-    height: 100px;
-    line-height: 85px;
-    font-size: 6em;
-  }
-}
-
 @media only screen and (min-width: 768px) {
   .email-input {
     display: flex;
@@ -151,6 +139,16 @@
     width: 400px;
     font-size: 1rem;
     background-color: transparent;
+  }
+
+  .hero {
+    align-items: flex-start;
+  }
+
+  .trailsText {
+    height: 100px;
+    line-height: 85px;
+    font-size: 6em;
   }
 
   .hero-text-desktop {
